--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
         "php": ">=7.4",
         "spryker/gui": "^3.26.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/merchant-relationship": "^1.7.0",
+        "spryker/merchant-relationship": "^1.10.0",
         "spryker/product-management-extension": "^1.2.0",
-        "spryker/symfony": "^3.0.0"
+        "spryker/symfony": "^3.0.0",
+        "spryker/transfer": "^3.25.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*"
