--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.3",
-        "spryker/gui": "^3.26.0",
+        "spryker/gui": "^3.26.0 || ^4.0.0",
         "spryker/kernel": "^3.30.0",
         "spryker/merchant-relationship": "^1.10.0",
         "spryker/product-management-extension": "^1.2.0",
